tests/reference/run-array_bounds_check_01-713dbcf.stderr
runtime error: Array shape mismatch in assignment to 'x'. Tried to match size 10 of dimension 1 of LHS with size 3 of dimension 1 of RHS. Use '--realloc-lhs-arrays' option to reallocate LHS automatically.
 --> tests/errors/array_bounds_check_01.f90:5:5
  |
5 |     x = [1, 2, 3]
  |     ^ LHS size is 10
  |
5 |     x = [1, 2, 3]
  |         ^^^^^^^^^ RHS size is 3
